fixing more html, css format issues
fun fact: fixing the unbalanced div's exposed more sections that were wider than should be, causing right sidebar to wrap  so that it overlapped the left pane.  sidebar is fixed now but still need to find/fix remaining too-wide divs

--- a/src/main/webapp/css/tdar-base.css
+++ b/src/main/webapp/css/tdar-base.css
@@ -647,9 +647,14 @@ h2 {
 	margin-bottom: 20px !important;
 }
 
+
 .cols h1 {
-	font-size: 30px;
-	line-height: 34px;
+    font-size: 30px;
+    line-height: 34px;
+}
+
+/*retain title formatting on view-page formatting without screwing up the edit pages */ 
+.cols h1.view-page-title {
 	margin: -5px 0 0 0 !important;
 }
 
